--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,6 +1,8 @@
 @import './variables.less';
-@import './font-size.less';
-@import './Form.less';
+@import './font-size.less';// 通用字体
+@import './Form.less';     // 表单
+@import './HomePage.less'; // 主页
+@import './Notify.less';   // 通知公告
 body {
   height: 100%;
   -moz-osx-font-smoothing: grayscale;
